Setup for reading Markdown posts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "gatsby": "^1.9.215",
     "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify-cms": "^1.0.10"
+    "gatsby-plugin-netlify-cms": "^1.0.10",
+    "gatsby-source-filesystem": "^1.5.24",
+    "gatsby-transformer-remark": "^1.7.33"
   }
 }
