--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,22 @@ backend:
 
 media_folder: static/assets
 
+publish_mode: editorial_workflow
+
 collections:
+  - name: pages
+    label: Pages
+    files:
+      - file: "src/pages/index/index.md"
+        label: "Index"
+        name: "index"
+        create: true
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
+          - {label: "Path", name: "path", widget: "hidden", default: "/index"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Subtitle", name: "subtitle", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
   - name: blog
     label: Blog
     folder: blog
