--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,13 +13,13 @@ collections:
       - file: "src/pages/index/index.md"
         label: "Index"
         name: "index"
-        create: true
+        delete: false
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page"}
           - {label: "Path", name: "path", widget: "hidden", default: "/index"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Body", name: "body", widget: "markdown"}          
   - name: blog
     label: Blog
     folder: blog
