--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}      
-          - {label: "Cat", name: "cat", widget: "categories"}      
+          - {label: "Categories", name: "categories", widget: "categories"}      
             
   - name: blog
     label: Blog
