--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,9 +19,18 @@ collections:
           - {label: "Path", name: "path", default: "/indexed"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}      
-          - {label: "Categories", name: "categories", widget: "categories"}      
-            
+          - {label: "Video", name: "video", widget: "string"}
+          - label: "Client Logos"
+            name: "clientLogos"
+            widget: "list"
+            fields:
+              - {label: Image, name: image, widget: image}
+          - label: "Stories"
+            name: "stories"
+            widget: "list"
+            fields: [{label: "Story Heading", name: "storyHeading", widget: string}, {label: "Story Body", name: "storyBody", widget: string}, {label: "Story Link", name: "storyLink", widget: "object", fields: [{label: "Link Name", name: "linkName", widget: "string"}, {label: "Link", name: "link", widget: "string"}]}]
+          - {label: "Centered Text", name: "centeredText", widget: "object", fields: [{label: "Heading", name: "heading", widget: "string"}, {label: "Body", name: "body", widget: "string"}, {label: "Link", name: "link", widget: "object", fields: [{label: "Link Name", name: "linkName", widget: "string"}, {label: "Link", name: "link", widget: "string"}]}]}
+          - {label: "Features", name: "features", widget: "list", fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: string}, {label: Description, name: description, widget: string}]}
   - name: blog
     label: Blog
     folder: blog
