--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
           - {label: "Path", name: "path", default: "/"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "Video", name: "video", widget: "string"}
+          - {label: "Video", name: "video", widget: "object", fields: [{label: "src", name: src, widget: string}, {label: poster, name: poster, widget: string}]}
           - label: "Client Logos"
             name: "clientLogos"
             widget: "list"
