--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,6 +36,13 @@ collections:
             fields: [{label: "Story Heading", name: "storyHeading", widget: string}, {label: "Story Body", name: "storyBody", widget: string}, {label: "Story Link", name: "storyLink", widget: "object", fields: [{label: "Link Name", name: "linkName", widget: "string"}, {label: "Link", name: "link", widget: "string"}]}]
           - {label: "Centered Text", name: "centeredText", widget: "object", fields: [{label: "Heading", name: "heading", widget: "string"}, {label: "Body", name: "body", widget: "string"}, {label: "Link", name: "link", widget: "object", fields: [{label: "Link Name", name: "linkName", widget: "string"}, {label: "Link", name: "link", widget: "string"}]}]}
           - {label: "Features", name: "features", widget: "list", fields: [{label: "Image", name: "image", widget: "image"}, {label: "Text", name: "text", widget: "string"}, {label: "Description", name: "description", widget: "string"}]}
+          - label: "Testimonial"
+            name: "testimonial"
+            widget: "object"
+            fields:
+              - {label: "Quote", name: "quote", widget: "string"}
+              - {label: "Author", name: "author", widget: "string"}
+              - {label: "Role", name: "role", widget: "string"}
       - file: "src/pages/data-storytelling/data-storytelling.md"
         label: "Data Storytelling"
         name: "dataStorytelling"
