--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-netlify-cms": "^1.0.10",
     "gatsby-plugin-sharp": "^1.6.37",
+    "gatsby-remark-images": "^1.5.53",
     "gatsby-source-filesystem": "^1.5.24",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.22",
