--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,6 +39,8 @@ collections:
             name: "tabbedTopFeatures"
             widget: "object"
             fields:
+              - {label: "Title", name: "title", widget: "string"}
+              - {label: "SubTitle", name: "subtitle", widget: "string"}
               - {label: "Tab 1", name: "tab1", widget: "string"}
               - {label: "Image 1", name: "image1", widget: "image"}
               - {label: "Tab 2", name: "tab2", widget: "string"}
