Added 'Thank you' page. Improved demo form

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -75,3 +75,12 @@ collections:
           - {label: "Detail1", name: "detail1", widget: "string"}
           - {label: "Detail2", name: "detail2", widget: "string"}
           - {label: "Detail3", name: "detail3", widget: "string"}
+      - file: "src/pages/thank-you/thank-you.md"
+        label: Thank You
+        name: thankYou
+        delete: false
+        fields:
+          - {label: "Template Key", name: "templateKey", default: "thank-you-page", widget: hidden}
+          - {label: "Path", name: "path", default: "/thank-you", , widget: hidden}
+          - {label: "Title", name: "title", default: "Thanks for reaching out to us!"}
+          - {label: "Subtitle", name: "subtitle", default: "One of our friendly Account Executives will be in touch with you shortly."}
