--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "gatsby": "^1.9.215",
+    "gatsby-cli": "^1.1.51",
     "gatsby-image": "^1.0.41",
     "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify-cms": "^1.0.10",
+    "gatsby-plugin-netlify-cms": "^1.0.12",
     "gatsby-plugin-sharp": "^1.6.37",
     "gatsby-remark-images": "^1.5.53",
     "gatsby-source-filesystem": "^1.5.24",
     "gatsby-transformer-remark": "^1.7.33",
     "gatsby-transformer-sharp": "^1.6.22",
+    "netlify-cms": "^1.7.0",
     "react-helmet": "^5.2.0"
   }
 }
